MegaScryptGame/Assets/MegaScrypt/Generated/MegaScryptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\MegaScrypt.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class MegaScryptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, Var=2, Function=3, Return=4, For=5, Do=6, While=7, In=8, Break=9, 
		Continue=10, If=11, Else=12, Null=13, Bool=14, Or=15, And=16, Equals=17, 
		NEquals=18, GTEquals=19, LTEquals=20, Excl=21, GT=22, LT=23, Add=24, Subtract=25, 
		Multiply=26, Divide=27, Modulus=28, LBrace=29, RBrace=30, Assign=31, Semicolon=32, 
		Underscore=33, Colon=34, LParen=35, RParen=36, LBracket=37, Rbracket=38, 
		PlusEq=39, MinusEq=40, MultiplyEq=41, DivideEq=42, Dot=43, Increment=44, 
		Decrement=45, Comma=46, Id=47, Number=48, Whitespace=49, Comment=50, String=51;
	public const int
		RULE_compoundId = 0, RULE_assignment = 1, RULE_decleration = 2, RULE_increment = 3, 
		RULE_decrement = 4, RULE_expression = 5, RULE_statement = 6, RULE_block = 7, 
		RULE_object = 8, RULE_objectPair = 9, RULE_objectGetter = 10, RULE_objectAccess = 11, 
		RULE_program = 12, RULE_ifStatement = 13, RULE_ifBlock = 14, RULE_elseIfBlock = 15, 
		RULE_elseBlock = 16, RULE_funcDecleration = 17, RULE_varList = 18, RULE_returnStmt = 19, 
		RULE_invocation = 20, RULE_paramList = 21, RULE_array = 22, RULE_arrayIndex = 23, 
		RULE_forStmt = 24, RULE_whileStmt = 25, RULE_foreachStmt = 26, RULE_doWhileStmt = 27, 
		RULE_foreach = 28;
	public static readonly string[] ruleNames = {
		"compoundId", "assignment", "decleration", "increment", "decrement", "expression", 
		"statement", "block", "object", "objectPair", "objectGetter", "objectAccess", 
		"program", "ifStatement", "ifBlock", "elseIfBlock", "elseBlock", "funcDecleration", 
		"varList", "returnStmt", "invocation", "paramList", "array", "arrayIndex", 
		"forStmt", "whileStmt", "foreachStmt", "doWhileStmt", "foreach"
	};

	private static readonly string[] _LiteralNames = {
		null, "'foreach'", "'var'", "'function'", "'return'", "'for'", "'do'", 
		"'while'", "'in'", "'break'", "'continue'", "'if'", "'else'", "'null'", 
		null, "'||'", "'&&'", "'=='", "'!='", "'>='", "'<='", "'!'", "'>'", "'<'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", "'='", "';'", "'_'", 
		"':'", "'('", "')'", "'['", "']'", "'+='", "'-='", "'*='", "'/='", "'.'", 
		"'++'", "'--'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, "Var", "Function", "Return", "For", "Do", "While", "In", "Break", 
		"Continue", "If", "Else", "Null", "Bool", "Or", "And", "Equals", "NEquals", 
		"GTEquals", "LTEquals", "Excl", "GT", "LT", "Add", "Subtract", "Multiply", 
		"Divide", "Modulus", "LBrace", "RBrace", "Assign", "Semicolon", "Underscore", 
		"Colon", "LParen", "RParen", "LBracket", "Rbracket", "PlusEq", "MinusEq", 
		"MultiplyEq", "DivideEq", "Dot", "Increment", "Decrement", "Comma", "Id", 
		"Number", "Whitespace", "Comment", "String"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MegaScrypt.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MegaScryptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MegaScryptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MegaScryptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompoundIdContext : ParserRuleContext {
		public ObjectGetterContext objectGetter() {
			return GetRuleContext<ObjectGetterContext>(0);
		}
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public CompoundIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compoundId; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompoundId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompoundIdContext compoundId() {
		CompoundIdContext _localctx = new CompoundIdContext(Context, State);
		EnterRule(_localctx, 0, RULE_compoundId);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58; objectGetter();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 59; Match(Id);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public CompoundIdContext compoundId() {
			return GetRuleContext<CompoundIdContext>(0);
		}
		public ITerminalNode Assign() { return GetToken(MegaScryptParser.Assign, 0); }
		public ITerminalNode Semicolon() { return GetToken(MegaScryptParser.Semicolon, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public ArrayContext array() {
			return GetRuleContext<ArrayContext>(0);
		}
		public ITerminalNode PlusEq() { return GetToken(MegaScryptParser.PlusEq, 0); }
		public ITerminalNode MinusEq() { return GetToken(MegaScryptParser.MinusEq, 0); }
		public ITerminalNode MultiplyEq() { return GetToken(MegaScryptParser.MultiplyEq, 0); }
		public ITerminalNode DivideEq() { return GetToken(MegaScryptParser.DivideEq, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 2, RULE_assignment);
		try {
			State = 91;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 62; compoundId();
				State = 63; Match(Assign);
				State = 67;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
				case 1:
					{
					State = 64; expression(0);
					}
					break;
				case 2:
					{
					State = 65; @object();
					}
					break;
				case 3:
					{
					State = 66; array();
					}
					break;
				}
				State = 69; Match(Semicolon);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 71; compoundId();
				State = 72; Match(PlusEq);
				State = 73; expression(0);
				State = 74; Match(Semicolon);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 76; compoundId();
				State = 77; Match(MinusEq);
				State = 78; expression(0);
				State = 79; Match(Semicolon);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 81; compoundId();
				State = 82; Match(MultiplyEq);
				State = 83; expression(0);
				State = 84; Match(Semicolon);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 86; compoundId();
				State = 87; Match(DivideEq);
				State = 88; expression(0);
				State = 89; Match(Semicolon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclerationContext : ParserRuleContext {
		public ITerminalNode Var() { return GetToken(MegaScryptParser.Var, 0); }
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode Semicolon() { return GetToken(MegaScryptParser.Semicolon, 0); }
		public ITerminalNode Assign() { return GetToken(MegaScryptParser.Assign, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public ArrayContext array() {
			return GetRuleContext<ArrayContext>(0);
		}
		public DeclerationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decleration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecleration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclerationContext decleration() {
		DeclerationContext _localctx = new DeclerationContext(Context, State);
		EnterRule(_localctx, 4, RULE_decleration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(Var);
			State = 94; Match(Id);
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Assign) {
				{
				State = 95; Match(Assign);
				State = 99;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 96; expression(0);
					}
					break;
				case 2:
					{
					State = 97; @object();
					}
					break;
				case 3:
					{
					State = 98; array();
					}
					break;
				}
				}
			}

			State = 103; Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncrementContext : ParserRuleContext {
		public ITerminalNode Increment() { return GetToken(MegaScryptParser.Increment, 0); }
		public CompoundIdContext compoundId() {
			return GetRuleContext<CompoundIdContext>(0);
		}
		public IncrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_increment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncrementContext increment() {
		IncrementContext _localctx = new IncrementContext(Context, State);
		EnterRule(_localctx, 6, RULE_increment);
		try {
			State = 110;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Increment:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 105; Match(Increment);
				State = 106; compoundId();
				}
				}
				break;
			case Id:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 107; compoundId();
				State = 108; Match(Increment);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DecrementContext : ParserRuleContext {
		public ITerminalNode Decrement() { return GetToken(MegaScryptParser.Decrement, 0); }
		public CompoundIdContext compoundId() {
			return GetRuleContext<CompoundIdContext>(0);
		}
		public DecrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_decrement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DecrementContext decrement() {
		DecrementContext _localctx = new DecrementContext(Context, State);
		EnterRule(_localctx, 8, RULE_decrement);
		try {
			State = 117;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Decrement:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 112; Match(Decrement);
				State = 113; compoundId();
				}
				}
				break;
			case Id:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 114; compoundId();
				State = 115; Match(Decrement);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ITerminalNode Number() { return GetToken(MegaScryptParser.Number, 0); }
		public CompoundIdContext compoundId() {
			return GetRuleContext<CompoundIdContext>(0);
		}
		public IncrementContext increment() {
			return GetRuleContext<IncrementContext>(0);
		}
		public DecrementContext decrement() {
			return GetRuleContext<DecrementContext>(0);
		}
		public ArrayContext array() {
			return GetRuleContext<ArrayContext>(0);
		}
		public InvocationContext invocation() {
			return GetRuleContext<InvocationContext>(0);
		}
		public FuncDeclerationContext funcDecleration() {
			return GetRuleContext<FuncDeclerationContext>(0);
		}
		public ITerminalNode LParen() { return GetToken(MegaScryptParser.LParen, 0); }
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ITerminalNode RParen() { return GetToken(MegaScryptParser.RParen, 0); }
		public ITerminalNode Excl() { return GetToken(MegaScryptParser.Excl, 0); }
		public ITerminalNode Subtract() { return GetToken(MegaScryptParser.Subtract, 0); }
		public ITerminalNode String() { return GetToken(MegaScryptParser.String, 0); }
		public ITerminalNode Null() { return GetToken(MegaScryptParser.Null, 0); }
		public ITerminalNode Bool() { return GetToken(MegaScryptParser.Bool, 0); }
		public ITerminalNode Multiply() { return GetToken(MegaScryptParser.Multiply, 0); }
		public ITerminalNode Divide() { return GetToken(MegaScryptParser.Divide, 0); }
		public ITerminalNode Modulus() { return GetToken(MegaScryptParser.Modulus, 0); }
		public ITerminalNode Add() { return GetToken(MegaScryptParser.Add, 0); }
		public ITerminalNode LT() { return GetToken(MegaScryptParser.LT, 0); }
		public ITerminalNode GT() { return GetToken(MegaScryptParser.GT, 0); }
		public ITerminalNode LTEquals() { return GetToken(MegaScryptParser.LTEquals, 0); }
		public ITerminalNode GTEquals() { return GetToken(MegaScryptParser.GTEquals, 0); }
		public ITerminalNode Equals() { return GetToken(MegaScryptParser.Equals, 0); }
		public ITerminalNode NEquals() { return GetToken(MegaScryptParser.NEquals, 0); }
		public ITerminalNode And() { return GetToken(MegaScryptParser.And, 0); }
		public ITerminalNode Or() { return GetToken(MegaScryptParser.Or, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 10;
		EnterRecursionRule(_localctx, 10, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 138;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 120; Match(Number);
				}
				break;
			case 2:
				{
				State = 121; compoundId();
				}
				break;
			case 3:
				{
				State = 122; increment();
				}
				break;
			case 4:
				{
				State = 123; decrement();
				}
				break;
			case 5:
				{
				State = 124; array();
				}
				break;
			case 6:
				{
				State = 125; invocation();
				}
				break;
			case 7:
				{
				State = 126; funcDecleration();
				}
				break;
			case 8:
				{
				State = 127; Match(LParen);
				State = 128; expression(0);
				State = 129; Match(RParen);
				}
				break;
			case 9:
				{
				State = 131; Match(Excl);
				State = 132; expression(11);
				}
				break;
			case 10:
				{
				State = 133; Match(Subtract);
				State = 134; expression(10);
				}
				break;
			case 11:
				{
				State = 135; Match(String);
				}
				break;
			case 12:
				{
				State = 136; Match(Null);
				}
				break;
			case 13:
				{
				State = 137; Match(Bool);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 160;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 158;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 140;
						if (!(Precpred(Context, 9))) throw new FailedPredicateException(this, "Precpred(Context, 9)");
						State = 141;
						_la = TokenStream.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Multiply) | (1L << Divide) | (1L << Modulus))) != 0)) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 142; expression(10);
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 143;
						if (!(Precpred(Context, 8))) throw new FailedPredicateException(this, "Precpred(Context, 8)");
						State = 144;
						_la = TokenStream.LA(1);
						if ( !(_la==Add || _la==Subtract) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 145; expression(9);
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 146;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 147;
						_la = TokenStream.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GTEquals) | (1L << LTEquals) | (1L << GT) | (1L << LT))) != 0)) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 148; expression(8);
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 149;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 150;
						_la = TokenStream.LA(1);
						if ( !(_la==Equals || _la==NEquals) ) {
						ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 151; expression(7);
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 152;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 153; Match(And);
						State = 154; expression(6);
						}
						break;
					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 155;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 156; Match(Or);
						State = 157; expression(5);
						}
						break;
					}
					} 
				}
				State = 162;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public IfStatementContext ifStatement() {
			return GetRuleContext<IfStatementContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public DeclerationContext decleration() {
			return GetRuleContext<DeclerationContext>(0);
		}
		public ForStmtContext forStmt() {
			return GetRuleContext<ForStmtContext>(0);
		}
		public WhileStmtContext whileStmt() {
			return GetRuleContext<WhileStmtContext>(0);
		}
		public ForeachStmtContext foreachStmt() {
			return GetRuleContext<ForeachStmtContext>(0);
		}
		public DoWhileStmtContext doWhileStmt() {
			return GetRuleContext<DoWhileStmtContext>(0);
		}
		public ITerminalNode Semicolon() { return GetToken(MegaScryptParser.Semicolon, 0); }
		public InvocationContext invocation() {
			return GetRuleContext<InvocationContext>(0);
		}
		public IncrementContext increment() {
			return GetRuleContext<IncrementContext>(0);
		}
		public DecrementContext decrement() {
			return GetRuleContext<DecrementContext>(0);
		}
		public ReturnStmtContext returnStmt() {
			return GetRuleContext<ReturnStmtContext>(0);
		}
		public ITerminalNode Break() { return GetToken(MegaScryptParser.Break, 0); }
		public ITerminalNode Continue() { return GetToken(MegaScryptParser.Continue, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_statement);
		try {
			State = 179;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,11,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 163; ifStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 164; assignment();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 165; decleration();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 166; forStmt();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 167; whileStmt();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 168; foreachStmt();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 169; doWhileStmt();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				{
				State = 176;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
				case 1:
					{
					State = 170; invocation();
					}
					break;
				case 2:
					{
					State = 171; increment();
					}
					break;
				case 3:
					{
					State = 172; decrement();
					}
					break;
				case 4:
					{
					State = 173; returnStmt();
					}
					break;
				case 5:
					{
					State = 174; Match(Break);
					}
					break;
				case 6:
					{
					State = 175; Match(Continue);
					}
					break;
				}
				State = 178; Match(Semicolon);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public ITerminalNode LBrace() { return GetToken(MegaScryptParser.LBrace, 0); }
		public ITerminalNode RBrace() { return GetToken(MegaScryptParser.RBrace, 0); }
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}
